; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-complex/src/extr_complex.c_complex_imaginary.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-complex/src/extr_complex.c_complex_imaginary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mrb_complex = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @complex_imaginary to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @complex_imaginary(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mrb_complex*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call %struct.mrb_complex* @complex_ptr(i32* %6, i32 %7)
  store %struct.mrb_complex* %8, %struct.mrb_complex** %5, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = load %struct.mrb_complex*, %struct.mrb_complex** %5, align 8
  %11 = getelementptr inbounds %struct.mrb_complex, %struct.mrb_complex* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @mrb_float_value(i32* %9, i32 %12)
  ret i32 %13
}

declare dso_local %struct.mrb_complex* @complex_ptr(i32*, i32) #1

declare dso_local i32 @mrb_float_value(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
